# InterII-Trekking

./: .gitignore  Dockerfile  README.md  connect_container.sh  interii_init.sh  raw_points.npy  requirements.txt  reset.sh  run_container.sh  run_foxglove_bridge.sh  setup.sh  test-led.sh
ahvaiassets/: LICENSE
installer/: Dockerfile
launch/: interii.launch.py  naive_launch.py  visual_pid_launch.py
src/: naive_start.py  stop_esc.py
src/bedman_controller/: main.py
src/config/: config.yaml  imx219_calib_data.txt  imx219_calib_data.yaml  interii_mono_imu_config.yaml  picamera_calib_data.txt
src/controller/: CMakeLists.txt  controller_node.py  package.xml
src/controller/include/: state_machine.hpp
src/controller/scripts/: cone_detector.py  imu_tracking_node.py  mark_detector.py  teleop_node.py
src/controller/src/: pid.cpp  steering_node.cpp  steering_node_old.cpp  visualization_node.cpp
src/controller_node/: CMakeLists.txt  package.xml
src/controller_node/src/: controller_node.cpp  slam_node.cpp  steering_node.cpp
src/custom_messages/: CMakeLists.txt  package.xml
src/custom_messages/msg/: Imu9DOF.msg
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: Imu.msg
src/drivers/: CMakeLists.txt  package.xml  setup.py
src/drivers/drivers/: camera_publisher.py  tcs32_publisher.py
src/drivers/drivers/libs/: adafruit_pca9685.py  adafruit_servokit.py  adafruit_tcs34725.py  adafruit_vl53l0x.py  board.py  busio.py  esc.py  gy_tcs3200.py  i2c.py
src/drivers/drivers/libs/adafruit_bno08x/: __init__.py
src/drivers/drivers/libs/microcontroller/: __init__.py
src/drivers/include/: image_converter.cpp  image_converter.h  jetson_gpio.hpp  ros_compat.h
src/drivers/launch/: drivers_launch.py
src/drivers/scripts/: bluetooth_gamepad.py  bno_publisher.py  flare_listener.py  imu_calibration.py  ina_publisher.py  irdist_publisher.py  motor_listener.py  tcs32_publisher.py  tcs34_publisher.py  vl5_publisher.py
src/drivers/scripts/libs/: i2c.py
src/drivers/scripts/old/: tcs32_publisher.py
src/drivers/src/: camera_publisher.cpp  flare_listener.cpp  image_converter.cpp  led_listener.cpp  opencv_cam_pub.cpp  ros_compat.cpp
src/examples/: FU09IENJI0JKPPD.py  bno055.ino
src/mapper/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/mapper/mapper/: new_mapper.py
src/mapper/src/: mapper.cpp
src/mark_signal/: package.xml  setup.cfg  setup.py
src/mark_signal/mark_signal/: led_controller.py
src/motor_drivers/: package.xml  setup.cfg  setup.py
src/motor_drivers/motor_drivers/: motor_listener.py
src/nodes/: imu.py
src/nodes/carlos/: carlos_the_mapper.py  filter_points.py  rdp.py  see_points.py  talker.py
src/nodes/diff_drive/: esc.py  listener.py  motor_controller.py
src/nodes/led_control/: talker.py
src/nodes/position_tracking/: IMU_tracker.py  bno08x_test.py  convert_position.py  data.txt  mathlib.py  position_file.py  position_trekker.py  talker.py
src/nodes/sensors/bno08x/: calibrate.py  dummy.py  talker.py
src/nodes/sensors/tcs34725/: talker.py
src/nodes/teleop_keyboard/: teleop_twist_keyboard.py
src/obj_detector/: CMakeLists.txt  package.xml
src/obj_detector/scripts/: cone_detector.py
src/open_vins/config/interII/: kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
src/open_vins/ov_msckf/launch/: subscribe.launch.py
src/pose_estimators/: package.xml  setup.cfg  setup.py
src/pose_estimators/pose_estimators/: estimator.py
src/pose_estimators/pose_estimators/imu_tracker/: slam_node.py  tracker2file.py
src/pose_estimators/pose_estimators/visual_odometry/: mono_video_odometry.py  vo_node.py
src/pose_logger/: CMakeLists.txt  package.xml
src/pose_logger/src/: pose_logger.cpp
src/robot_localization/params/: ekf.yaml
src/scripts/nodes/drive/: drive_node.py
src/scripts/nodes/imu_tracker/: tracker_node.py
src/scripts/nodes/led_control/: led_controller.py
src/scripts/nodes/mapper/: filter_points.py
src/scripts/nodes/position_tracking/: callibrate.py  convert_position.py  pos_tracker_2file.py  pos_tracker_node.py
src/sensor_drivers/: package.xml  setup.py
src/sensor_drivers/launch/: drivers.launch  drivers_launch.py
src/sensor_drivers/sensor_drivers/: battery_publisher.py  bno_publisher.py  camera_publisher.py  color_publisher.py  imu_publisher.py  irdist_publisher.py  mpu_publisher.py  tcs32_publisher.py  tcs34_publisher.py
src/sensor_drivers_cpp/: CMakeLists.txt  package.xml
src/signal/: package.xml  setup.cfg  setup.py
src/signal/signal/: led_controller.py
src/steering/: steering_node.py
src/teleop_keyboard/: teleop_node.py
src/tests/: bitbang.py  bno08x_simpletest.py  bno08x_test.py  callib_esc.py  esc.py  esc3.py  esc_lib.c  esc_mraa.py  led.py  led2.py  load.py  rdp.py  sensor_stress.py  servo.py  test_esc.py  test_esc_2.py  test_teleop.py  test_teleop_turtle.py  vl52l0x_test.py
src/tests/gpio/: bitbang.py
src/tests/motors/: esc.py  test_teleop.py  turnigy_esc.py
src/tests/sensors/: bno08x_test.py  camera_listener.py  camera_test.py  led.py  set_vl53_addr.py  tcs34725_test.py  vl52l0x_test.py
src/utils/: camera_listener.py  led_off.py  test_detection.py
src/visual_pid/: package.xml  setup.cfg  setup.py
src/visual_pid/visual_pid/: 2d_pid.py  cone_detector.py  twod_pid.py  visual_pid.py
src/visualizer/: CMakeLists.txt  package.xml
src/visualizer/src/: visualization_node.cpp
system_install/: Dockerfile  Dockerfile.humble  Dockerfile.opencv  install.sh  interii.service  interii_init.service  interii_init.sh  requirements.txt  ros2_build.sh
tests/: servo.py
tests/bluetooth/: find-devices.py
tests/color/: color_filter.py
tests/gpio/: led_pwm.py
tests/motors/: esc_pigpio.py  pca.py  servo.py  teleop.py  test_teleop_turtle.py
tests/rviz_test/: markerstest.cpp  pose2marker.py  pose_dummy.py
tests/sensors/: IMU_tracker.py  led.py
utils/: bluetooth_publisher.py  camera_listener.py  fake_pose_publisher.py  led_off.py  naive_start.py  pose_drawer.py  pose_logger_NOT_TESTED.cpp  pose_logger_NOT_TESTED.py  rotations.py  stop_esc.py  trajectory_path.py
(+31 files in other folders)
